[INTERNAL][FIX] demokit/Explored app code highlighting fixes
 - Fixes issue with horizontal scrollbar when there are some long lines in the text

--- a/src/sap.ui.demokit/src/sap/ui/demokit/explored/css/style.css
+++ b/src/sap.ui.demokit/src/sap/ui/demokit/explored/css/style.css
@@ -41,6 +41,7 @@
 
 pre.sapUiCodeViewer.sapUiExploredCodeViewer {
 	background-color: white;
+	word-wrap: break-word;
 }
 
 /* explored entity view */
